--- a/gym_app/src/main/resources/application.properties
+++ b/gym_app/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+database-type=mysql
+spring.profiles.active=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/gym_app
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.security.user.name=user
+spring.security.user.password=password
+server.port=8081
