--- a/gym_app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/gym_app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,15 @@
       "name": "database-type",
       "type": "java.lang.String",
       "description": "Description for database-type."
-  }
-] }
+    },
+    {
+      "name": "database-type",
+      "type": "java.lang.String",
+      "description": "Description for database-type."
+    },
+    {
+      "name": "database-type",
+      "type": "java.lang.String",
+      "description": "Description for database-type."
+    }
+  ] }
