--- a/gym_app/pom.xml
+++ b/gym_app/pom.xml
@@ -22,10 +22,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<!--        <dependency>-->
-		<!--            <groupId>org.springframework.boot</groupId>-->
-		<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-		<!--        </dependency>-->
+<!--		        <dependency>-->
+<!--		            <groupId>org.springframework.boot</groupId>-->
+<!--		            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--		        </dependency>-->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-rest-webmvc</artifactId>
+			<version>3.5.5</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -49,11 +54,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!--        <dependency>-->
-		<!--            <groupId>org.springframework.security</groupId>-->
-		<!--            <artifactId>spring-security-test</artifactId>-->
-		<!--            <scope>test</scope>-->
-		<!--        </dependency>-->
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.2.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>5.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>5.15.3</version>
+		</dependency>
+
+<!--		<dependency>-->
+<!--		            <groupId>org.springframework.security</groupId>-->
+<!--		            <artifactId>spring-security-test</artifactId>-->
+<!--		            <scope>test</scope>-->
+<!--		        </dependency>-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
