--- a/gym_app/src/main/resources/application.properties
+++ b/gym_app/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.profiles.active=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/gym_app
 spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
+
 spring.jpa.show-sql=true
 spring.security.user.name=user
 spring.security.user.password=password
